--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "1.0.0",
   "type": "module",
   "description": "Educational version of SIMBELMAWA dashboard built with React.js for learning purposes",
-  "homepage": "https://firdausmnt.github.io/mber",
+  "homepage": "https://firdausmntp.github.io/mber",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
