--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "mber",
   "private": true,
-  "version": "1.0.0",
+  "version": "1.0.1",
   "type": "module",
-  "description": "Educational version of SIMBELMAWA dashboard built with React.js for learning purposes",
-  "homepage": "https://firdausmntp.github.io/mber",
+  "description": "MBER",
+  "homepage": "https://firdausmntp.github.io/mber/",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -18,7 +18,8 @@
     "framer-motion": "^10.16.4",
     "lucide-react": "^0.263.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^7.6.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
@@ -44,6 +45,6 @@
     "internship",
     "job-portal"
   ],
-  "author": "Your Name",
+  "author": "Firdausmntp",
   "license": "MIT"
 }
